# cam_overlay

./: .gitignore  CMakeLists.txt  Makefile  Makefile.include  README.md  cam_overlay.c  common.c  common.h  display.c  display.h  math_3d.h  matrix.c  matrix.h  overlay.py  png_texture.c  png_texture.h  shader-YUYV.frag  shader.frag  shader.vert
bmc/: Makefile.include  display.c  gl_common.h
drm/: Makefile.include  display.c
lib/: math_3d.h
src/: CMakeLists.txt  CopyFiles.cmake  RaspberryPi.cmake
src/App/: CMakeLists.txt
src/App/src/: App.cpp  App.hpp  Main.cpp
src/CamOverlay/: CMakeLists.txt
src/CamOverlay/include/CamOverlay/: Config.hpp  GlContext.hpp  IDisplay.hpp  IInput.hpp  IOutput.hpp  Image.hpp  InputData.hpp  Logger.hpp  Math3d.hpp  Overlay.hpp  PngTexture.hpp  ScaledImage.hpp
src/CamOverlay/res/: shader.frag
src/CamOverlay/src/: Config.cpp  GlContext.cpp  Image.cpp  Logger.cpp  Math3d.cpp  Overlay.cpp  PngTexture.cpp  ScaledImage.cpp
src/Core/: CMakeLists.txt
src/Core/include/Core/: Common.hpp  ILogger.hpp
src/Core/include/Core/Exceptions/: ErrNoException.hpp  Exception.hpp
src/Core/src/: Common.cpp
src/Display/: CMakeLists.txt
src/Display/Bcm/: CMakeLists.txt
src/Display/Bcm/include/DisplayBcm/: DisplayBcm.hpp
src/Display/Bcm/src/: DisplayBcm.cpp
src/Display/X11/: CMakeLists.txt
src/Display/X11/include/DisplayX11/: DisplayX11.hpp
src/Display/X11/src/: DisplayX11.cpp
src/Gl/: CMakeLists.txt
src/Gl/include/Gl/: Buffer.hpp  Context.hpp  FrameBuffer.hpp  GlCommon.hpp  Program.hpp  Shader.hpp  Texture.hpp
src/Gl/src/: Buffer.cpp  FrameBuffer.cpp  GlContext.cpp  Program.cpp  Shader.cpp  Texture.cpp
src/Input/: CMakeLists.txt
src/Input/File/: CMakeLists.txt
src/Input/File/include/InputFile/: InputFile.hpp
src/Input/File/src/: InputFile.cpp
src/Input/V4L2/: CMakeLists.txt
src/Input/V4L2/include/InputV4L2/: InputV4L2.hpp  InputV4L2Base.hpp  InputV4L2MMap.hpp  InputV4L2Read.hpp  InputV4L2UserPtr.hpp
src/Input/V4L2/src/: InputV4L2Base.cpp  InputV4L2MMap.cpp  InputV4L2Read.cpp  InputV4L2UserPtr.cpp
src/Output/: CMakeLists.txt
src/Output/File/: CMakeLists.txt
src/Output/File/include/OutputFile/: OutputFile.hpp
src/Output/File/src/: OutputFile.cpp
src/Output/Jpeg/: CMakeLists.txt
src/Output/Jpeg/include/OutputJpeg/: JpegDecompress.hpp  OutputJpeg.hpp
src/Output/Jpeg/res/: shader-JPEG.frag
src/Output/Jpeg/src/: JpegDecompress.cpp  OutputJpeg.cpp
src/Output/Shader/: CMakeLists.txt
src/Output/Shader/include/OutputShader/: OutputShader.hpp
src/Output/Shader/res/: shader-UYVY.frag  shader-YUVY.frag
src/Output/Shader/src/: OutputShader.cpp
x11/: Makefile.include  display.c  gl_common.h
